--- a/app/src/main/res/layout/activity_main_flexbox.xml
+++ b/app/src/main/res/layout/activity_main_flexbox.xml
@@ -1061,6 +1061,44 @@
                             android:minWidth="200dp"
                             android:progress="50" />
                     </TableRow>
+
+                    <TableRow>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="Custom 1:"
+                            android:textColor="@color/black" />
+
+                        <SeekBar
+                            android:id="@+id/seekbar_audio_custom1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="5dp"
+                            android:max="100"
+                            android:minWidth="200dp"
+                            android:progress="50" />
+                    </TableRow>
+
+                    <TableRow>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="Custom 2:"
+                            android:textColor="@color/black" />
+
+                        <SeekBar
+                            android:id="@+id/seekbar_audio_custom2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="5dp"
+                            android:max="100"
+                            android:minWidth="200dp"
+                            android:progress="50" />
+                    </TableRow>
                 </TableLayout>
             </LinearLayout>
 
