支持测试键值拦截接口

--- a/app/src/main/res/layout/activity_main_flexbox.xml
+++ b/app/src/main/res/layout/activity_main_flexbox.xml
@@ -114,6 +114,13 @@
                 app:flexWrap="wrap">
 
                 <ToggleButton
+                    android:id="@+id/btn_androidx_key_intercept"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textOff="Key Intercept"
+                    android:textOn="Key Intercept" />
+
+                <ToggleButton
                     android:id="@+id/btn_androidx_4g"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
