--- a/app/src/main/res/layout/activity_main_flexbox.xml
+++ b/app/src/main/res/layout/activity_main_flexbox.xml
@@ -109,6 +109,13 @@
                     android:layout_height="wrap_content"
                     android:text="TTS" />
 
+                <ToggleButton
+                    android:id="@+id/btn_language"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textOff="@string/chinese"
+                    android:textOn="@string/english" />
+
             </com.google.android.flexbox.FlexboxLayout>
 
             <TextView
